--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-    -   id: check-yaml
     -   id: check-added-large-files
     -   id: check-json
-    -   id: requirements-txt-fixer
+    -   id: check-toml
+    -   id: check-yaml
 
 -   repo: https://github.com/hhatto/autopep8
     rev: v2.3.2
