Add Sphinx documentation files for FoundryTools-CLI-NG commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,11 @@ dev = [
     "pre-commit>=4.2.0",
     "pylint>=3.3.6",
 ]
+docs = [
+    "sphinx>=8.3.0",
+    "sphinx-click>=6.0.0",
+    "sphinx-rtd-theme>=3.0.2",
+]
 
 [tool.hatch.version]
 path = "src/foundrytools_cli_ng/__init__.py"
