--- a/renovate.json
+++ b/renovate.json
@@ -1,15 +1,5 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
   "packageRules": [
-    {
-      "matchManagers": [
-        "pep621"
-      ],
-      "enabled": true,
-      "description": "Enable detection of optional dependencies in pyproject.toml"
-    }
+    {"matchDepNames": ["*"], "rangeStrategy": "update-lockfile"}
   ]
 }
