--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,15 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:recommended"
+  ],
   "packageRules": [
-    {"matchDepNames": ["*"], "rangeStrategy": "update-lockfile"}
+    {
+      "matchManagers": [
+        "pep621"
+      ],
+      "enabled": true,
+      "description": "Enable detection of optional dependencies in pyproject.toml"
+    }
   ]
 }
